--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
+    "password": "password",
+    "database": "job_app_db",
+    "host": "localhost",
+    "port": 3306,
     "dialect": "mysql"
   },
   "test": {
