added status codes to routes and created seeds.sql file

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "scooby321",
     "database": "job_app_db",
     "host": "localhost",
     "port": 3306,
