--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-handlebars": "^5.1.0",
     "fs": "0.0.1-security",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.14",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "sequelize": "^6.3.5"
